# BEExAI

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  benchmetrics.py  openml_download.py  pyproject.toml  requirements.txt
benchmark_results/clf_cat/: KDDCup09_upselling.csv  compass.csv  covertype.csv  electricity.csv  eye_movements.csv  rl.csv  road-safety.csv
benchmark_results/clf_num/: Higgs.csv  MagicTelescope.csv  MiniBooNE.csv  bank-marketing.csv  california.csv  covertype.csv  credit.csv  electricity.csv  eye_movements.csv  house_16H.csv  jannis.csv  kdd_ipums_la_97-small.csv  phoneme.csv  pol.csv  wine.csv
benchmark_results/multi_class/: cmc.csv  mfeat-factors.csv  mfeat-fourier.csv  mfeat-karhunen.csv  mfeat-morphological.csv  mfeat-zernike.csv  optdigits.csv  pendigits.csv
benchmark_results/reg_cat/: Bike_Sharing_Demand.csv  Brazilian_houses.csv  Mercedes_Benz_Greener_Manufacturing.csv  SGEMM_GPU_kernel_performance.csv  analcatdata_supreme.csv  black_friday.csv  diamonds.csv  house_sales.csv  particulate-matter-ukair-2017.csv  visualizing_soil.csv
benchmark_results/reg_num/: Ailerons.csv  Bike_Sharing_Demand.csv  MiamiHousing2016.csv  california.csv  cpu_act.csv  diamonds.csv  elevators.csv  fifa.csv  houses.csv  medical_charges.csv  pol.csv  sulfur.csv  superconduct.csv
config/: boston.yml  example.yml  kickstarter.yml
docs/source/: benchmark.md  conf.py  index.md  installation.md  metrics.md  other.md  sequential.md  technical_details.md  usage.md
notebooks/: 1.Starter.ipynb  2.Explain.ipynb  3.Metrics.ipynb  all_in_one.ipynb
(+39 files in other folders)
