[project]
name = "beexai"
version = "0.0.1"
description = "A library for benchmarking explainability methods"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/SquareResearchCenter-data/BEExAI"
Issues = "https://github.com/SquareResearchCenter-data/BEExAI/issues"