[project]
name = "beexai"
version = "0.0.6"
description = "BEExAI: Benchmark to Evaluate Explainable AI"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License"
]
authors = [
  {name = "Samuel Sithakoul", email = "samuelabc78310@gmail.com"},
]
dependencies = [
  'captum>=0.6.0',
  'joblib>=1.3.2',
  'matplotlib>=3.8.3',
  'numpy>=1.26.4',
  'openml>=0.14.1',
  'pandas>=2.2.1',
  'plotly>=5.18.0',
  'PyYAML>=6.0.1',
  'scikit-learn>=1.3.0',
  'seaborn>=0.13.2',
  'torch>=2.0.1',
  'tqdm>=4.66.1',
  'xgboost>=2.0.3'
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/SquareResearchCenter-AI/BEExAI"
Issues = "https://github.com/SquareResearchCenter-AI/BEExAI/issues"